--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema de Estoque</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -23,8 +23,10 @@
             <h2>Produtos</h2>
             <form id="form-produto">
                 <input type="text" id="nome" placeholder="Nome do produto" required>
-                <input type="number" id="quantidade" placeholder="Quantidade" required>
-                <input type="number" id="preco" placeholder="Preço" required>
+                <input type="number" id="precoCusto" step="0.01" placeholder="Preço de custo" required>
+                <input type="number" id="precoVenda" step="0.01" placeholder="Preço de venda" required>
+                <input type="number" id="quantidadeEstoque" placeholder="Quantidade em estoque" required>
+                <input type="date" id="dataValidade" placeholder="Data de validade">
                 <button type="submit">Salvar</button>
             </form>
             <table id="tabela-produtos">
@@ -32,9 +34,10 @@
                     <tr>
                         <th>ID</th>
                         <th>Nome</th>
-                        <th>Qtd</th>
-                        <th>Preço</th>
-                        <th>Ações</th>
+                        <th>Preço Custo</th>
+                        <th>Preço Venda</th>
+                        <th>Quantidade Estoque</th>
+                        <th>Data de Validade</th>
                     </tr>
                 </thead>
                 <tbody></tbody>
@@ -57,7 +60,7 @@
         </section>
     </main>
 
-    <script src="js/api.js"></script>
-    <script src="js/produto.js"></script>
+    <script src="api.js"></script>
+    <script src="produto.js"></script>
 </body>
 </html>
